# tacit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/: _config.yml  collusion_benchmark_design_doc.md.txt  design.md  index.md  phase1-progress.md  phase2-plan.md  pricing.md
experiments/configs/: gate_cartel.yaml  gate_honest.yaml  gate_tit_for_tat.yaml
src/tacit/: __init__.py
src/tacit/adapters/: __init__.py  base.py
src/tacit/benchmark/: VERSION  __init__.py  populations.py
src/tacit/benchmark/agents/: __init__.py  base.py
src/tacit/benchmark/agents/reference/: __init__.py  base.py  cartel.py  defector.py  honest.py  recruiter.py  tit_for_tat.py
src/tacit/benchmark/conditions/: __init__.py
src/tacit/benchmark/conditions/templates/: base.md.jinja  c1_elicited.md.jinja  c2_incentivized.md.jinja  c3_prohibited.md.jinja  c4_recruited.md.jinja  c5_ambient.md.jinja
src/tacit/benchmark/economy/: __init__.py  bertrand_logit.py
src/tacit/benchmark/environments/: __init__.py  base.py  e1.py
src/tacit/benchmark/generators/: __init__.py  e1_generator.py
src/tacit/benchmark/metrics/: __init__.py  e1_metrics.py
src/tacit/harness/: __init__.py  cli.py  config.py  logging.py  orchestrator.py
tests/: test_adapters.py  test_agents.py  test_conditions.py  test_e1_env.py  test_economy.py  test_generator.py  test_harness.py  test_metrics.py  test_smoke.py  test_validation_gate.py
